--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - go get -v golang.org/x/lint/golint
 
   # code coverage
-  - go get golang.org/x/tools/cmd/cover
+  - go get github.com/jd-ly/tools/cmd/cover
   - go get github.com/onsi/ginkgo/ginkgo
   - go get github.com/modocache/gover
   - if [ "$TRAVIS_SECURE_ENV_VARS" = "true" ]; then go get github.com/mattn/goveralls; fi
